--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,2 +1,13 @@
-- name: Github Action for LaTeX
-  uses: xu-cheng/latex-action@v2
+name: Github Action for LaTeX
+uses: xu-cheng/latex-action@v2
+on: push
+jobs:
+  build_latex:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Set up Git repository
+        uses: actions/checkout@v2
+      - name: Compile LaTeX document
+        uses: xu-cheng/latex-action@v2
+        with:
+          root_file: /MAIN/main.tex
