--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          upload_url: "https://github.com/L0rd0fB0red0m/SMP-Mathe/releases/tag/v1.0"
-          asset_path: main.pdf
+          upload_url: "https://github.com/L0rd0fB0red0m/SMP-Mathe/releases/download/v1.0/SMP-Mathe.pdf"
+          asset_path: ./main.pdf
           asset_name: SMP-Mathe.pdf
           asset_content_type: application/pdf
