--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,11 +11,12 @@ jobs:
         with:
           root_file: main.tex
       - name: Push to release
-        uses: actions/upload-release-asset@v1
+        uses: xresloader/upload-to-github-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          upload_url: "https://github.com/L0rd0fB0red0m/SMP-Mathe/releases/download/v1.0/SMP-Mathe.pdf"
-          asset_path: ./main.pdf
-          asset_name: SMP-Mathe.pdf
-          asset_content_type: application/pdf
+          file: "main.pdf"
+          overwrite: true
+          verbose: true # for debugging
+          draft: false
+          update_latest_release: true
